# polypulse

./: .env.example  .gitignore  4EVERLAND_COMPATIBILITY_GUIDE.md  4EVERLAND_DEPLOYMENT.md  CHANGELOG.md  COMMIT_MESSAGE.txt  CURRENT_FEATURES_SUMMARY.md  DEPLOY.md  DEPLOYMENT_READY_SUMMARY.md  DEPLOYMENT_SUMMARY.md  DEPLOY_PRODUCTION.md  DEPLOY_STAGING.md  Dockerfile  ENHANCEMENT_IMPLEMENTATION_STATUS.md  FEE_STRUCTURE_IMPLEMENTATION.md  FLEEK_DEPLOYMENT.md  FRONTEND_REDIRECT_FIX.md  P2P_BETTING_IMPLEMENTATION_STATUS.md  P2P_DEPLOYMENT_CHECKLIST.md  PERFORMANCE_IMPROVEMENTS.md  POLYPULSE_KILLER_FEATURES.md  PRE_DEPLOYMENT_CHECKLIST.md  PRODUCTION_CHECKLIST.md  QUICK_START_FLEEK.md  README.md  REDEPLOYMENT_GUIDE.md  SPECS_FOR_AGENT.md  TYPESCRIPT_FIX_SUMMARY.md  WALLET_FIX_SUMMARY.md  docker-compose.staging.yml  docker-compose.yml  rust-toolchain.toml
backend/: Cargo.toml
backend/.sqlx/: query-156ccde4687f93504ec5de8f87cfe86f444c8f5794112d5b9c5f7ed644bce453.json
backend/migrations/: 20240101000001_initial_schema.sql  20240102000001_gasless_transactions.sql  20240102000002_wallet_transactions.sql  20240201000001_polypulse_schema.sql  20240202000001_cleanup_schema.sql  20240203000001_auth_nonces.sql  20240301000001_p2p_bets.sql  20240302000001_p2p_notifications.sql  20240401000001_enhancements.sql  20240422000001_add_wallet_transaction_columns.sql
backend/src/: config.rs  db.rs  errors.rs  lmsr.rs  main.rs  models.rs  state.rs
backend/src/middleware/: auth.rs  mod.rs  rate_limit.rs  rate_limit.test.rs  request_id.rs  validation.rs
backend/src/routes/: auth.rs  bets.rs  categories.rs  challenges.rs  comments.rs  health.rs  markets.rs  mod.rs  notifications.rs  p2p_bets.rs  paymaster.rs  polls.rs  users.rs  wagers.rs  wallet.rs
backend/src/services/: activity_feed.rs  bet_templates.rs  cache.rs  cache.test.rs  encryption.rs  leaderboard.rs  mod.rs  mpesa.rs  p2p_notifications.rs  paymaster.rs  poll_closer.rs  question_parser.rs  reputation.rs  session.rs  telegram_bot.rs  wallet.rs  wallet_transactions.rs  web3auth.rs
backend/src/ws/: mod.rs  p2p_bets.rs
backend/tests/: multi_pool_payout_tests.rs
contracts/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  rust-toolchain.toml
contracts/frontend-integration/: README.md
contracts/scripts/: build.sh  deploy-mainnet.sh  deploy-testnet.sh  test.sh
contracts/tests/: README.md  challenge_tests.rs  market_tests.rs
(+142 files in other folders)
