[workspace]
members = [
    "contracts/market",
    "contracts/challenge",
    "contracts/multi-pool",
    "contracts/p2p-bet",
]
resolver = "2"

[workspace.dependencies]
soroban-sdk = "20.5.0"
proptest = "1.2"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
